# cpp-algorithms

./: CMakeLists.txt
include/algorithms/search/: binary_search.hpp  linear_search.hpp
tests/search/: test_binary_search.cpp  test_linear_search.cpp
